<resources>
    <string name="app_name">Main App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_devices">Devices</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_schedule">Schedule</string>

    <string name="login_login_button">login</string>
    <string name="login_register_button">register</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="login_name">Name</string>
    <string name="title_activity_login_actvity">LoginActvity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="devices_fragment">Devices</string>
    <string name="rules_fragment">Rules</string>
    <string name="schedule_fragment">Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Devices</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
</resources>