<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_devices"
            android:title="@string/devices_fragment"/>
        <item
            android:id="@+id/nav_rules"
            android:title="@string/menu_rules"/>
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/menu_schedule"/>
        <!--item
            android:id="@+id/nav_loginlogout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="Mr Edwards" >
            <menu>
                <item android:title="test1" />
                <item android:title="test2"/>
            </menu>
        </item-->
    </group>
</menu>