<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_devices">

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.example.mainapp.ui.devices.Devices"
        android:label="@string/devices_fragment"
        tools:layout="@layout/devices_fragment" />
    <fragment
        android:id="@+id/nav_rules"
        android:name="com.example.mainapp.ui.rules.RulesFragment"
        android:label="@string/rules_fragment"
        tools:layout="@layout/rules_fragment"/>
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.mainapp.ui.schedule.Schedule"
        android:label="@string/schedule_fragment"
        tools:layout="@layout/schedule_fragment" />
</navigation>